# saturnscrape

./: .cookiecutter.json  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/: settings.yml
.github/workflows/: constraints.txt  docker-publish.yml  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
saturnscrape/: __init__.py  __main__.py  client.py  types.py  utils.py
src/: launcher.py
src/saturnscrape/: __init__.py  __main__.py  _assets.py  _metadata.py  client.py
tests/: __init__.py  test_main.py
