[tool.poetry]
name = "saturnscrape"
version = "0.1.0"
description = "Scrapes information from https://saturn.live, a collaborate school scheduling system."
authors = ["Parker Wahle <parkeredwardwahle2017@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/regulad/saturnscrape"
repository = "https://github.com/regulad/saturnscrape"
packages = [
    { include = "saturnscrape" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
